--- a/resources/css/app.css
+++ b/resources/css/app.css
@@ -1,6 +1,7 @@
 @import 'tailwindcss';
 @import "./navbar.css";
 @import "./footer.css";
+@import "./general.css";
 @source '../../vendor/laravel/framework/src/Illuminate/Pagination/resources/views/*.blade.php';
 @source '../../storage/framework/views/*.php';
 @source '../**/*.blade.php';
@@ -10,6 +11,43 @@
     --font-sans: 'Instrument Sans', ui-sans-serif, system-ui, sans-serif, 'Apple Color Emoji', 'Segoe UI Emoji',
         'Segoe UI Symbol', 'Noto Color Emoji';
 }
+/*fonts innit*/
+@font-face {
+    font-family: 'MTNBrighterSans-Bold';
+    src: url('/resources/fonts/MTNBrighterSans-Bold.woff') format('woff'), /* Adjust path and format as needed */
+    url('/resources/fonts/MTNBrighterSans-Bold.woff') format('woff');
+    font-weight: bold;
+    font-style: normal;
+}
+@font-face {
+    font-family: 'MTNBrighterSans-Light';
+    src: url('/resources/fonts/MTNBrighterSans-Light.woff') format('woff'), /* Adjust path and format as needed */
+    url('/resources/fonts/MTNBrighterSans-Light.woff') format('woff');
+    font-weight: normal;
+    font-style: normal;
+}
+@font-face {
+    font-family: 'MTNBrighterSans-Medium';
+    src: url('/resources/fonts/MTNBrighterSans-Medium.woff') format('woff'), /* Adjust path and format as needed */
+    url('/resources/fonts/MTNBrighterSans-Medium.woff') format('woff');
+    font-weight: normal;
+    font-style: normal;
+}
+@font-face {
+    font-family: 'MTNBrighterSans-MediumItalic';
+    src: url('/resources/fonts/MTNBrighterSans-MediumItalic.woff') format('woff'), /* Adjust path and format as needed */
+    url('/resources/fonts/MTNBrighterSans-MediumItalic.woff') format('woff');
+    font-weight: normal;
+    font-style: italic;
+}
+@font-face {
+    font-family: 'MTNBrighterSans-Regular';
+    src: url('/resources/fonts/MTNBrighterSans-Regular.woff') format('woff'), /* Adjust path and format as needed */
+    url('/resources/fonts/MTNBrighterSans-Regular.woff') format('woff');
+    font-weight: normal;
+    font-style: normal;
+}
+
 body{
     background-color: #f0f0f0;
 }
