--- a/resources/css/navbar.css
+++ b/resources/css/navbar.css
@@ -1,4 +1,5 @@
 .nav-bar{
+
     width: 100%;
     position: fixed;
     z-index: 10;
@@ -16,13 +17,16 @@
         flex-direction: row;
         gap: 30px;
 
+
         li{
+            padding: 0 10px;
             a{
+                color: #f0f0f0;
                 text-decoration: none;
                 font-size: 16px;
                 line-height: 20px;
                 font-weight: 600;
-                font-family:Arial;
+                font-family: MTNBrighterSans-Medium;
                 transition: color .3s ease;
 
             }
@@ -32,18 +36,16 @@
     }
     }
 }
-.nav-bar::before{
-    z-index: -10;
-    content: " ";
-    position: absolute;
-    width: 100%;
-    height: 100%;
-    top: 0;
-    left: 0;
-    background-color: #f0f0f0;
-    opacity: 0.1;
-}
 .scrolled{
     background-color: #0d0348;
     color: white;
+}
+.active-a{
+    border-color: transparent;
+    border-bottom: #fff;
+    border-style: solid;
+    border-width: 3px;
+    border-top: none;
+    /* overflow: hidden; */
+    z-index: 1;
 }
