--- a/resources/css/footer.css
+++ b/resources/css/footer.css
@@ -1,35 +1,52 @@
-.footer{
+.footer {
     padding: 70px 50px;
-    background-color:#ffffff ;
-    div{
+    background-color: #ffffff;
+
+    div {
         border-bottom: 1px #0d0348 solid;
         padding: 30px 30px;
 
-        span{
+        span {
             color: #0d0348;
             display: block;
             text-align: center;
             font-size: 14px;
             line-height: 18px;
-
         }
 
-        .footer-sec{
+        .footer-sec {
             display: flex;
             gap: 30px;
             border: none;
             padding: 0;
             margin: 10px 0;
 
-            ul{
-
-                li{
-                    span{
+            ul {
+                li {
+                    span {
                         border: none;
                     }
                 }
             }
+        }
+    }
 
+    /* Mobile Styles (max-width: 768px) */
+    @media (max-width: 768px) {
+        padding: 40px 20px;
+
+        div {
+            padding: 20px 0;
+
+            span {
+                font-size: 12px;
+                line-height: 16px;
+            }
+
+            .footer-sec {
+                flex-direction: column;
+                gap: 15px;
+            }
         }
     }
 }
