--- a/resources/css/general.css
+++ b/resources/css/general.css
@@ -16,3 +16,21 @@
         transform: translateY(-10px);
     }
 }
+
+.value::before{
+    content: "";
+    position: absolute;
+    top: 0;
+    width: 100%;
+    height: 100%;
+    background-color: rgba(0, 0, 0, 0.5);
+    opacity: 0;
+    transition: all 0.3s ease-in-out;
+}
+
+.group:hover .value::before{
+    opacity: 0.3;
+}
+.group{
+    transition: all .3s ease-in-out;
+}
