--- a/resources/css/navbar.css
+++ b/resources/css/navbar.css
@@ -1,5 +1,5 @@
 .nav-bar{
-
+    max-height: 70px;
     width: 100%;
     position: fixed;
     z-index: 10;
@@ -12,7 +12,7 @@
     }
 
     ul{
-        display: inline-flex;
+        display: flex;
         flex-direction: row;
         gap: 30px;
 
@@ -36,7 +36,7 @@
     }
 }
 .scrolled{
-    background-color: #0d0348;
+    background-color: rgba(45, 45, 45, 0.89);
     color: white;
 }
 .active-a{
